welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:4: error: '<-' expected but ')' found.
		for (y<--1 to getMondeLargeur()-1) 
                                                 ^ColumnByColumn:11: error: illegal start of simple expression
	}
        ^